Created and started on Sluttraport

--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -1,8 +1,10 @@
 \documentclass[12pt]{article}
 
+\usepackage{fontspec}
+
 \title{Sluttraport praksis i arbeidslivet - DAT156}
 \date{Haust 2017}
-\author{Sigurd Gravning \\Wide Assessment \\Stine Andreassen}
+\author{Sigurd Gravning \\146188 \\ \\Wide Assessment \\Stine Andreassen}
 
 \begin{document}
 
@@ -10,8 +12,26 @@
 \pagenumbering{gobble}
 \newpage
 \pagenumbering{arabic}
+\tableofcontents
+\newpage
 
 \section{Intro}
-	Dette er ein intro
+
+Når eg var i prosessen med å finna praksisplass til dette semesteret vart eg så
+heldig å komma på intervju med både Sparebanken Vest, og Wide Assessment.
+Dette gav meg ein unik moglegheit til å velga mellom to vidt forskjellige firma,
+og vidt forskjellige erfaringar. Intervjuet med Wide Assessment var kort, konsist,
+og rett på sak. I motsetning til intervjuet med SPV, som var lengre og meir forvirrande,
+sidan dei ikkje hadde hatt elevar til praksis før. Etter litt tid fekk eg
+tilbakemeldig frå SPV, som sa dei ikkje var klare for å ta inn nokon i praksis
+dette semesteret. So då begynte samtalen med Stine frå Wide Assessment med ein gong.
+Eg starta  i praksis der med ein gong semesteret starta, og eg må sei eg er glad
+for at det blei Wide Assessment i staden for SPV. Eg håpte personleg å lære ein
+del om arbeidslivet og få oppleva korleis det vil vera når ein kjem ut i jobb.
+Som ein student som har sete på skulebenken i 17 år, var det veldig forfriskande
+å sjå kva ein skal jobba med. Som eg trudde var det også mykje nytt ein ikkje
+lære på Høgskulen som er viktig ute i arbeidslivet. Wide Assessment har vert
+ein veldig ideell praksis plass med nok å gjera, og hyggelege folk som alltid
+er villige til å hjelpa.
 
 \end{document}
