Added the Wide Assessment section

--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -34,4 +34,9 @@ lære på Høgskulen som er viktig ute i arbeidslivet. Wide Assessment har vert
 ein veldig ideell praksis plass med nok å gjera, og hyggelege folk som alltid
 er villige til å hjelpa.
 
+\section{Wide Assessment}
+
+Wide Assessment er eit lite oppstartsfirma, beståande av Stine Andreassen,
+Arve Andreassen, Eivind Hjertnes, Viljar Rolfsen, og Andreas Hammerbeck.
+
 \end{document}
