fiksa litt på bildet

--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -2,7 +2,6 @@
 
 \usepackage{fontspec}
 \usepackage{graphicx}
-\usepackage{wrapfig}
 \graphicspath{ {images/} }
 
 \title{Sluttraport praksis i arbeidslivet - DAT156}
@@ -35,7 +34,7 @@ Som ein student som har sete på skulebenken i 17 år, var det veldig forfriskan
 å sjå kva ein skal jobba med. Som eg trudde var det også mykje nytt ein ikkje
 lære på Høgskulen som er viktig ute i arbeidslivet. Wide Assessment har vert
 ein veldig ideell praksis plass med nok å gjera, og hyggelege folk som alltid
-er villige til å hjelpa. 
+er villige til å hjelpa.
 
 \section{Wide Assessment}
 
@@ -78,8 +77,12 @@ praksis kunne sitta i same rom som dei fast ansatte.
 \begin{figure}[h]
   \includegraphics[width=0.75\textwidth]{Studenter}
   \centering
+  \caption{Praktikantane på gamle kontoret}
+  \label{fig:praktikantar1}
 \end{figure}
 
-Stine, som er leiar i Wide Assessment, har vert veldig aktiv med oss.
+Stine, som er leiar i Wide Assessment, har vert veldig aktiv med oss. Ho har leda
+ann den manuelle testinga av nettsida og har vert flink til å dytta oss ut i nye
+utfordrande oppgåver.
 
 \end{document}
