Added Arbeidsoppgåver section

--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -70,19 +70,39 @@ lunsj, so ein blir fort kjend med mange av dei forskjellige folka som jobbe der.
 Innad i Wide Assessment var da veldig lågt under taket for å stilla spørsmål heilt
 frå starten av. Både Viljar som utviklar og Eivind som sjefsutviklar var hjelpsame
 når ein hadde noko som helst problem med da ein jobba med. Det føltes desverre ikkje
-lika lett i starten å spørra om hjelp. Bergen Works var i prosessen å flytta lokale
-til det store opne landskapet dei er i no. So me hadde ikkje plass til at me i
-praksis kunne sitta i same rom som dei fast ansatte.
+lika lett i starten å spørra om hjelp.
 
-\begin{figure}[h]
+\begin{figure}[!h]
   \includegraphics[width=0.75\textwidth]{Studenter}
   \centering
   \caption{Praktikantane på gamle kontoret}
   \label{fig:praktikantar1}
 \end{figure}
 
+Bergen Works var i prosessen å flytta lokale
+til det store opne landskapet dei er i no. So me hadde ikkje plass til at me i
+praksis kunne sitta i same rom som dei fast ansatte.
 Stine, som er leiar i Wide Assessment, har vert veldig aktiv med oss. Ho har leda
 ann den manuelle testinga av nettsida og har vert flink til å dytta oss ut i nye
-utfordrande oppgåver.
+utfordrande oppgåver. Arve var den i Wide Assessment som hadde minst å gjera med
+oss i praksis. Hans arbeid var meir ut mot kundane og investorane, so me interakterte
+for da meste med han under lunsjen.
+
+\section{Arbeidsoppgåver og metodar}
+
+Den første arbeidsoppgåva me fekk var ein innføringsoppgåva slik at me fekk satt
+inn i språket og teknologien me sku bruka vidare. Denne opggåva gjekk ut på å
+laga ei nettsida med ein oppgåvebehandler, i lista med oppgåver som skal gjerast.
+Me skulle laga ein backend med Node.js og ein frontend som bruker React og Redux.
+Verken frontend eller backend skulle vita om kvarandre, og det skule vera reactfull
+kommunikasjon mellom dei. Det var ikkje noko spesielle krav til design eller utsjånad,
+berre at den var funksjonibell. Etter me var ferdig med denne oppgåva gjekk me
+over på å skriva einhetstester for nettsida deiran. Her var det stor mangel på
+tester, og mykje å ta tak i. Vi skreiv testane i Jest og enzyme, der mykje var
+snapshot tester. Omtrent kvar fredag jakta me på bugs på sida, skreiv dei inn på
+Pivotal Tracker, og prøvde å fiksa dei som me kunne. Etterkvart som me blei
+komfortable med testingen hjalp me meir og meir til å fiksa desse bugsa. 
+
+\section{}
 
 \end{document}
