Wrote the last sections, added more pictures

--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -96,7 +96,7 @@ laga ei nettsida med ein oppgåvebehandler, i lista med oppgåver som skal gjera
 Me skulle laga ein backend med Node.js og ein frontend som bruker React og Redux.
 Verken frontend eller backend skulle vita om kvarandre, og det skule vera reactfull
 kommunikasjon mellom dei. Det var ikkje noko spesielle krav til design eller utsjånad,
-berre at den var funksjonibell. Etter me var ferdig med denne oppgåva gjekk me
+berre at den var funksjonibel. Etter me var ferdig med denne oppgåva gjekk me
 over på å skriva einhetstester for nettsida deiran. Her var det stor mangel på
 tester, og mykje å ta tak i. Vi skreiv testane i Jest og enzyme, der mykje var
 snapshot tester. Omtrent kvar fredag jakta me på bugs på sida, skreiv dei inn på
@@ -115,7 +115,7 @@ denne bruker Dotnet Core og Node.js, so har eg etterkvart også gått over frå
 Windows til Ubuntu for å lettare køyra alt.
 
 \begin{figure}[!h]
-  \includegraphics[width=\textwidth]{test}
+  \includegraphics[width=0.75\textwidth]{test}
   \centering
   \caption{Testfil til høgre, fila som blir testa til venstre}
   \label{fig:test1}
@@ -132,7 +132,7 @@ av koden. Dette har vert ein god peikepinne på framgangen vår, og eg har sjøl
 den store forskjellen me har gjort til saman, og kor mykje eg sjølv har fått til.
 
 \begin{figure}[!h]
-  \includegraphics[width=0.75\textwidth]{coverage}
+  \includegraphics[width=0.5\textwidth]{coverage}
   \centering
   \caption{Eksempel på dekking av kode}
   \label{fig:coverage1}
@@ -140,6 +140,73 @@ den store forskjellen me har gjort til saman, og kor mykje eg sjølv har fått t
 
 \section{Rolla i bedrifta}
 
+Hovedoppgåva og den største rolla eg har hatt i Wide Assessment er testar. Eg har
+både skrevet ein del testar og eg har vert med å testa system/nettsida deirans ein
+del. Utan om det har eg vert med å fiksa ein del bugs og problem som har dukka
+opp undervegs. Her har eg samarbeida mykje med dei andre i praksis som jobbar med
+dei same oppågåvene, og saman med Viljar, Andreas og Eivind når dei har hjulpet meg.
 
+
+\section{Relevans og læringsutbytte}
+
+Eg vil påstå at so og sei alt eg har gjort i Wide Assessment har vert veldig relevant
+til studiet mitt. Frå den første innføringsoppgåva der eg lærte veldig mykje om
+Javascript, React, Node.js, og korleis bygge ein funksjonibel nettside med desse.
+Dette var mykje å læra i starten sidan me ikkje har hatt nokon om Javascript og
+dei forskjellige rammeverka tidligare i studiet.
+Heile tide har me brukt Git og Github som versjoneringsverktøy som også er veldig
+relevant. Det er heldigvis noko me har brukt litt tidligare i studiet, som eg no
+er blitt veldig stødig på å bruka.
+Ved å skriva gode tester som dekker mest mogleg av koden i systemet
+har eg fått ein veldig god forståelse for korleis nettsida til Wide Assessment
+fungerar. Eg har fått sett korleis informasjonsflyten fungerar, korleis
+komponentane samarbeidar og snakkar med kvarandre. Sjølv om Javascript ikkje er
+eit fult funksjonelt språk, blir det brukt som eit funksjonelt språk av Wide Assessment.
+Dette har vert relevant sidan eg har tatt Funksjonell Programmering som valgfag
+dette semesteret. Her har eg lært samtidig frå faget på skulen og i Wide Assessment
+so eg trur eg har lært raskare på grunn av dette.
+Eg har fått jobba mindre med backenden enn det eg hadde sett for meg, men eg har
+fortsatt fått ein betre forståelse for REST og korleis ein god frontend bør
+kommunisera med backend. Når eg har fiksa bugs har eg lært meg å leita i
+kodebasen etter den rette plassen å fiksa. Det å kunne finna fram i eit større
+prosjekt vil vera veldig nyttig å kunna når ein skal ut i arbeidslivet.
+
+\section{Fungert bra/dårleg}
+
+Det er vanskeleg å finna ting som har fungerte dårleg. Eg har alltid fått hjelp
+når eg har fått problemar, eg har hatt ein litt bratt, men god læringskurve.
+Wide Assessment virker veldig rutta når det gjelder å ha praktikantar, so alt
+har eigentleg gått på skinner. Det har alltid vert ting å gjera, testar å skriva
+og bugs å finna. Som nemnt tidligare, ønskte eg å arbeida meir med
+backenden, men hadde eg lært litt raskare og hatt betre initiativ kunne eg fått
+gjort det.
+
+\section{Oppsummering}
+
+For meg har praksis vert veldig lærerikt og veldig kjekt. Med ein so hyggelig og
+rutta bedrift som Wide Assessment, og kjekke medpraktikanter har gjort praksisperioden
+noko som eg anbefalar veldig. Denne perioden har gitt meg ein veldig forståelse
+for korleis arbeidslivet kan sjå ut, og har gitt meg ein veldig smak for dette.
+Wide Assessment har også gitt meg innsikt i korleis eit oppstartsfirma fungerar
+og korleis dei arbeidar med andre oppstartsfirma. Eg deler den meininga at praksis
+burde vert obligatorisk i det studie eg går. Det er ikkje berre viktig å læra
+korleis ting blir gjort ute i arbeidslivet, men det motiverar veldig når ein
+trives i praksis og veit ein kjem til å trives ute i arbeidslivet.
+
+\section{Litt bilete frå kontoret}
+
+\begin{figure}[!h]
+  \includegraphics[width=0.5\textwidth]{lunsj}
+  \centering
+  \caption{Lunsjområdet}
+  \label{fig:lunsj1}
+\end{figure}
+
+\begin{figure}[!h]
+  \includegraphics[width=0.5\textwidth]{workspace}
+  \centering
+  \caption{Opne kontorplassen i det nye lokalet}
+  \label{fig:workspace1}
+\end{figure}
 
 \end{document}
