--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -11,6 +11,12 @@
 \begin{document}
 
 \maketitle
+
+\begin{figure}[!h]
+  \includegraphics[width=0.5\textwidth]{WA}
+  \centering
+\end{figure}
+
 \pagenumbering{gobble}
 \newpage
 \pagenumbering{arabic}
