Added URL for wa.works

--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 
 \usepackage{fontspec}
+\usepackage{hyperref}
 \usepackage{graphicx}
 \graphicspath{ {images/} }
 
@@ -27,7 +28,7 @@
 
 Når eg var i prosessen med å finna praksisplass til dette semesteret vart eg så
 heldig å komma på intervju med både Sparebanken Vest, og Wide Assessment.
-Dette gav meg ein unik moglegheit til å velga mellom to vidt forskjellige firma,
+Dette gav meg ein unik moglegheit til å velga mellom to vidt forskjellige firma
 og vidt forskjellige erfaringar. Intervjuet med Wide Assessment var kort, konsist,
 og rett på sak. I motsetning til intervjuet med SPV, som var lengre og meir forvirrande,
 sidan dei ikkje hadde hatt elevar til praksis før. Etter litt tid fekk eg
@@ -46,7 +47,7 @@ er villige til å hjelpa.
 
 Wide Assessment er eit lite oppstartsfirma, beståande av Stine Andreassen,
 Arve Andreassen, Eivind Hjertnes, Viljar Rolfsen, og Andreas Hammerbeck.
-Hovudproduktet deira er wa.works, ei nettside som gjer da lettare for jobbsøkarar
+Hovudproduktet deira er \url{www.wa.works}, ei nettside som gjer da lettare for jobbsøkarar
 og bedrifter innan tech å finna kvarandre. Som ein jobbsøkar leggar ein inn CV'en
 sin, men får også vurdert eigenskapane sine i forskjellige språk og teknologiar
 som er aktuelt i tech bransjen. Då får bedrifter ein mykje betre innsikt over
