--- a/Innleveringar/Sluttraport.tex
+++ b/Innleveringar/Sluttraport.tex
@@ -39,7 +39,7 @@ for at det blei Wide Assessment i staden for SPV. Eg håpte personleg å lære e
 del om arbeidslivet og få oppleva korleis det vil vera når ein kjem ut i jobb.
 Som ein student som har sete på skulebenken i 17 år, var det veldig forfriskande
 å sjå kva ein skal jobba med. Som eg trudde var det også mykje nytt ein ikkje
-lære på Høgskulen som er viktig ute i arbeidslivet. Wide Assessment har vert
+lære på Høgskulen som er viktig ute i arbeidslivet. Wide Assessment har vore
 ein veldig ideell praksis plass med nok å gjera, og hyggelege folk som alltid
 er villige til å hjelpa.
 
@@ -47,16 +47,16 @@ er villige til å hjelpa.
 
 Wide Assessment er eit lite oppstartsfirma, beståande av Stine Andreassen,
 Arve Andreassen, Eivind Hjertnes, Viljar Rolfsen, og Andreas Hammerbeck.
-Hovudproduktet deira er \url{www.wa.works}, ei nettside som gjer da lettare for jobbsøkarar
-og bedrifter innan tech å finna kvarandre. Som ein jobbsøkar leggar ein inn CV'en
+Hovudproduktet deira er \url{www.wa.works}, ei nettside som gjer da lettare for
+jobbsøkarar og bedriftar innan tech å finna kvarandre. Ein jobbsøkar leggar ein inn CV'en
 sin, men får også vurdert eigenskapane sine i forskjellige språk og teknologiar
-som er aktuelt i tech bransjen. Då får bedrifter ein mykje betre innsikt over
+som er aktuelt i tech bransjen. Då får bedriftar ein mykje betre innsikt over
 kva ein kandidat faktisk kan og har jobba med enn det som står i ein CV.
 Idéen byrja når Stine leita etter ein ny jobb og jobba gratis for Arve i Gyril.
-Gyril er eit rekruteringsfirma Arve har vert med å starte opp. Her brukte han
+Gyril er eit rekruteringsfirma Arve har vore med å starta opp. Her brukte han
 eit excel ark til skill assessment for jobbsøkarar. Dette blei basisen for Wide
-Assessment ved å forenkla prosessen og få det som ein nettløysing. Stine og Arve
-fekk fort støtte frå Innovasjon Norge, og fekk bekrefta at dette var ønska av å
+Assessment ved å forenkla prosessen og få det som ei nettløysing. Stine og Arve
+fekk fort støtte frå Innovasjon Norge, og fekk bekrefta at dette var ønska, av å
 gjera markedsundersøkingar. Sjølve prosjektet starta i Mars 2015 og dei blei ein
 bedrift April 2016. I starten tok dei mykje bruk av studentar og nyutdanna frivillige
 for å bygga grunnmuren. Her blei det bestemt mykje om korleis "produktet" skulle
@@ -89,8 +89,8 @@ lika lett i starten å spørra om hjelp.
 Bergen Works var i prosessen å flytta lokale
 til det store opne landskapet dei er i no. So me hadde ikkje plass til at me i
 praksis kunne sitta i same rom som dei fast ansatte.
-Stine, som er leiar i Wide Assessment, har vert veldig aktiv med oss. Ho har leda
-ann den manuelle testinga av nettsida og har vert flink til å dytta oss ut i nye
+Stine, som er leiar i Wide Assessment, har vore veldig aktiv med oss. Ho har leda
+ann den manuelle testinga av nettsida og har vore flink til å dytta oss ut i nye
 utfordrande oppgåver. Arve var den i Wide Assessment som hadde minst å gjera med
 oss i praksis. Hans arbeid var meir ut mot kundane og investorane, so me interakterte
 for da meste med han under lunsjen.
@@ -99,24 +99,24 @@ for da meste med han under lunsjen.
 
 Den første arbeidsoppgåva me fekk var ein innføringsoppgåva slik at me fekk satt
 inn i språket og teknologien me sku bruka vidare. Denne opggåva gjekk ut på å
-laga ei nettsida med ein oppgåvebehandler, i lista med oppgåver som skal gjerast.
-Me skulle laga ein backend med Node.js og ein frontend som bruker React og Redux.
-Verken frontend eller backend skulle vita om kvarandre, og det skule vera reactfull
+laga ei nettsida med ein oppgåvebehandlar, som hadde ei lista med oppgåver som skal gjerast.
+Me skulle laga ein backend med Node.js og ein frontend som brukar React og Redux.
+Verken frontend eller backend skulle vita om kvarandre, og det skule vera restfull
 kommunikasjon mellom dei. Det var ikkje noko spesielle krav til design eller utsjånad,
 berre at den var funksjonibel. Etter me var ferdig med denne oppgåva gjekk me
-over på å skriva einhetstester for nettsida deiran. Her var det stor mangel på
-tester, og mykje å ta tak i. Vi skreiv testane i Jest og enzyme, der mykje var
-snapshot tester. Omtrent kvar fredag jakta me på bugs på sida, skreiv dei inn på
+over på å skriva einhetstestar for nettsida. Her var det stor mangel på
+testar, og mykje å ta tak i. Vi skreiv testane i Jest og enzyme, der mykje var
+snapshot testar. Omtrent kvar fredag jakta me på bugs på sida, skreiv dei inn på
 Pivotal Tracker, og prøvde å fiksa dei som me kunne. Etterkvart som me blei
-komfortable med testingen hjalp me meir og meir til å fiksa desse bugsa.
+komfortable med testinga hjalp me meir og meir til å fiksa desse bugsa.
 På grunn av at me blei ferdig med innføringsoppgåva på ulike tidspunkt, begynte
-me å testa på ulike tidspunkt. So me jobba for da meste på eigne tester, men me
+me å testa på ulike tidspunkt. So me jobba for da meste på eigne testar, men me
 hjalp kvarandre for å løysa vanskelege problem. Med eit so opent kontorlandskap
 var det berre å sjå opp på nokon som kunne hjelpa. Det me brukte av dokumentasjon
 var eit Google docs dokument som inneholdt ei lista av alle testfilane som skulle
 skrivast eller forbetrast. Ved bug fiksinga brukte me Pivotal Tracker, som er ei
 nettsida der ein kan legga inn oppgåver som skal gjerast, trykke på dei for å visa
-at ein jobber med den, og markera den gjort når ein er ferdig. Eg har brukt
+at ein jobber med den, og markera at den er gjort når ein er ferdig. Eg har brukt
 Visual Studio Code som IDE, Docker for å køyra både frontend og backend lokalt,
 denne bruker Dotnet Core og Node.js, so har eg etterkvart også gått over frå
 Windows til Ubuntu for å lettare køyra alt.
@@ -131,11 +131,11 @@ Windows til Ubuntu for å lettare køyra alt.
 \section{Resultat}
 
 Det største arbeidet eg har gjort for Wide Assessment må vera dei testane eg skreiv.
-Eg har sjølvsagt også vert med å fiksa forskjellige bugs, men dei har ikkje vert
+Eg har sjølvsagt også vore med å fiksa forskjellige bugs, men dei har ikkje vore
 veldig store. Litt av målet vårt når me skreiv testane var å få best mogleg dekka
-koden med testar. Dette føler eg har vert med å forbetra ein del. Ved å bruka
+koden med testar. Dette føler eg har vore med å forbetra ein del. Ved å bruka
 Jest har me kunne fått sett alle testane i heile systemet, og kor mykje dei dekker
-av koden. Dette har vert ein god peikepinne på framgangen vår, og eg har sjølv sett
+av koden. Dette har vore ein god peikepinne på framgangen vår, og eg har sjølv sett
 den store forskjellen me har gjort til saman, og kor mykje eg sjølv har fått til.
 
 \begin{figure}[!h]
@@ -148,18 +148,18 @@ den store forskjellen me har gjort til saman, og kor mykje eg sjølv har fått t
 \section{Rolla i bedrifta}
 
 Hovedoppgåva og den største rolla eg har hatt i Wide Assessment er testar. Eg har
-både skrevet ein del testar og eg har vert med å testa system/nettsida deirans ein
-del. Utan om det har eg vert med å fiksa ein del bugs og problem som har dukka
+både skrevet ein del testar og eg har vore med å testa system/nettsida deirans ein
+del. Utan om det har eg vore med å fiksa ein del bugs og problem som har dukka
 opp undervegs. Her har eg samarbeida mykje med dei andre i praksis som jobbar med
 dei same oppågåvene, og saman med Viljar, Andreas og Eivind når dei har hjulpet meg.
 
 
 \section{Relevans og læringsutbytte}
 
-Eg vil påstå at so og sei alt eg har gjort i Wide Assessment har vert veldig relevant
+Eg vil påstå at so og sei alt eg har gjort i Wide Assessment har vore veldig relevant
 til studiet mitt. Frå den første innføringsoppgåva der eg lærte veldig mykje om
 Javascript, React, Node.js, og korleis bygge ein funksjonibel nettside med desse.
-Dette var mykje å læra i starten sidan me ikkje har hatt nokon om Javascript og
+Det var mykje å læra i starten sidan me ikkje har hatt nokon om Javascript og
 dei forskjellige rammeverka tidligare i studiet.
 Heile tide har me brukt Git og Github som versjoneringsverktøy som også er veldig
 relevant. Det er heldigvis noko me har brukt litt tidligare i studiet, som eg no
@@ -168,9 +168,9 @@ Ved å skriva gode tester som dekker mest mogleg av koden i systemet
 har eg fått ein veldig god forståelse for korleis nettsida til Wide Assessment
 fungerar. Eg har fått sett korleis informasjonsflyten fungerar, korleis
 komponentane samarbeidar og snakkar med kvarandre. Sjølv om Javascript ikkje er
-eit fult funksjonelt språk, blir det brukt som eit funksjonelt språk av Wide Assessment.
-Dette har vert relevant sidan eg har tatt Funksjonell Programmering som valgfag
-dette semesteret. Her har eg lært samtidig frå faget på skulen og i Wide Assessment
+eit fullt funksjonelt språk, blir det brukt som eit funksjonelt språk av Wide Assessment.
+Dette har vore relevant sidan eg har tatt Funksjonell Programmering som valgfag
+dette semesteret. Her har eg lært samtidig frå faget på skulen og i Wide Assessment,
 so eg trur eg har lært raskare på grunn av dette.
 Eg har fått jobba mindre med backenden enn det eg hadde sett for meg, men eg har
 fortsatt fått ein betre forståelse for REST og korleis ein god frontend bør
@@ -181,22 +181,22 @@ prosjekt vil vera veldig nyttig å kunna når ein skal ut i arbeidslivet.
 \section{Fungert bra/dårleg}
 
 Det er vanskeleg å finna ting som har fungerte dårleg. Eg har alltid fått hjelp
-når eg har fått problemar, eg har hatt ein litt bratt, men god læringskurve.
+når eg har fått problemar og eg har hatt ein litt bratt, men god læringskurve.
 Wide Assessment virker veldig rutta når det gjelder å ha praktikantar, so alt
-har eigentleg gått på skinner. Det har alltid vert ting å gjera, testar å skriva
+har eigentleg gått på skinner. Det har alltid vore ting å gjera, testar å skriva
 og bugs å finna. Som nemnt tidligare, ønskte eg å arbeida meir med
 backenden, men hadde eg lært litt raskare og hatt betre initiativ kunne eg fått
 gjort det.
 
 \section{Oppsummering}
 
-For meg har praksis vert veldig lærerikt og veldig kjekt. Med ein so hyggelig og
+For meg har praksis vore veldig lærerikt og veldig kjekt. Med ein so hyggelig og
 rutta bedrift som Wide Assessment, og kjekke medpraktikanter har gjort praksisperioden
-noko som eg anbefalar veldig. Denne perioden har gitt meg ein veldig forståelse
+noko som eg anbefalar veldig. Denne perioden har gitt meg ein veldig god forståelse
 for korleis arbeidslivet kan sjå ut, og har gitt meg ein veldig smak for dette.
 Wide Assessment har også gitt meg innsikt i korleis eit oppstartsfirma fungerar
 og korleis dei arbeidar med andre oppstartsfirma. Eg deler den meininga at praksis
-burde vert obligatorisk i det studie eg går. Det er ikkje berre viktig å læra
+burde vore obligatorisk i det studie eg går. Det er ikkje berre viktig å læra
 korleis ting blir gjort ute i arbeidslivet, men det motiverar veldig når ein
 trives i praksis og veit ein kjem til å trives ute i arbeidslivet.
 
